[package]
name = "image-dimensions-server"
version = "0.1.0"
authors = ["Ivan Chepurnyi <ivan.chepurnyi@ecomdev.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imagesize = "0.8.1"

[dependencies.tokio]
version = "0.2"
features = [
    "fs",
    "io-driver",
    "io-util",
    "io-std",
    "macros",
    "net",
    "rt-core",
    "rt-util",
    "rt-threaded",
    "stream",
    "sync"
]